# mwptools

./: .gitignore  .gitmodules  404.html  INSTALL  Makefile  README.md  common.mk  go.mod  go.sum  index.html  installer.sh  makeall.sh  meson.build  meson_options.txt  mwp_stderr_2019-04-05.txt  sitemap.xml
bbox-replay/bbsummary/: Cargo.toml  Makefile  README.md  bblreader.go  bblrec.rs  bbmeta.go  bbsummary.go  geocalc.go
bbox-replay/bbsummary/src/: bblmeta.rs  bblrec.rs  main.rs
data/: about.blp  accels  altdialog.blp  assistnow.blp  bb_dialog.blp  deltadialog.blp  dirn.blp  etx_dialog.blp  fb.blp  fm-dialog.blp  goto_dialog.blp  gps_stats_dialog.blp  gzmenu.blp  kmlremover.blp  meson.build  msprc_dialog.blp  mwp-base.css  mwp-completion.sh  mwp-video-source.blp  mwp.css  mwp.gresource-legacy.xml  mwp.gresource.xml  mwpjs.blp  mwpmain.blp  mwpmenu.blp  mwpsc.blp  mwpset.gresource.xml  mwpsetedit.blp  mwpsetting.blp  newpos.blp  odoview.blp  org.stronnag.mwp.gschema.xml  org.stronnag.mwpset.desktop  prefs.blp  radar_devices.blp  raw_dialog.blp  rssi.blp  safehmenu.blp  seeder.blp  shapedialog.blp  (+11 more)
meson/: find_files.sh  gobuild.sh  legacy_post_install.sh  meson.build  meson.build~  post_install.sh  trivial_post_install.sh  uninstall.sh
src/clib/: btdev.c  cserial.c  get_locale_double.c  getloc.c  getloc.h  meson.build  mwp_glinfo.c  mwpfuncs.h  mwpfuncs.vapi  paho_wrapper.c  paho_wrapper.h  paho_wrapper.vapi  poll_serials.c  rserial.c  rserial.h  speech_wrapper.c  v6only_windows_trainwreck.c  winidle.c  winidle.h
src/common/: autoland.vala  ble-helper.vala  ble_uuids.vala  bluetooth.vala  bluetooth_mgr.vala  bluez.vala  bluezinterface.vala  btdev.c  btdevice.vala  cliterm.vala  cserial.c  devman.vala  geocalc.vala  json_io.vala  mavcmd.vala  meson.build  mlock.vala  mspcmd.vala  mspmsg.h  mspmsg.vala  mspmsg.vapi  mwc.vala  mwp-config.h.in  mwp-gatt-bridge.c  mwp-gatt-bridge.h  mwp-gatt-bridge.vapi  mwp_glinfo.c  mwp_uriparser.vala  mwpfuncs.h  mwpfuncs.vapi  mwplog.vala  mwptermcap.vala  pid_from_name.c  poll_serials.c  posix_psmisc.c  posixspawn.vala  sede.vala  serial-device.vala  socat-bridge.sh  track_data.vala  (+8 more)
src/fc-cli/: Makefile  fc-get.vala  meson.build
src/mwp/: Makefile  _mwpvers.c  ah_widget.vala  blackbox_decode_complete.sh  decode_readsb.c  decode_readsb.h  decode_readsb.vapi  dem-reader.vala  dialogs.vala  flysky.vala  genoverlay.vala  geozedit.vala  geozonemgr.vala  geozreader.vala  get_places.vala  getinfo.sh  gst-audio-player.vala  gst-devmon.vala  gst-video-player.vala  iparser.vala  kmlovly.vala  kmlwriter.vala  layout-test.vala  liststore.vala  local_geo.vala  logger.vala  map_seeder.vala  mapsources.vala  mdialog.vala  menubar.ui  meson.build  mission.vala  mm_support.vala  mwp-about.vala  mwp-adsb-reader.vala  mwp-ah_widget.vala  mwp-application.vala  mwp-arm_processing.vala  mwp-assist_now.vala  mwp-async-dem-dl.vala  (+172 more)
src/mwp/pixmaps/: README
src/mwp/schema/: meson.build  org.mwptools.planner.gschema.xml
src/mwp/survey/: build_mission.vala  generate_points.vala  meson.build  mwp-survey.vala  surveyfiles.vala
src/mwp/ui/: altdialog.ui  bb_dialog.ui  cvt_dialog.ui  delta_dialog.ui  fm-dialog.ui  goto_dialog.ui  gps_stats_dialog.ui  map_source_dialog.ui  menubar.ui  meson.build  mwp-mimetypes.xml  mwp.ui  mwpsc.ui  odoview.ui  org.stronnag.mwp.desktop  otxdialog.ui  pe-dialog.ui  prefs.ui  raw_dialog.ui  seeder.ui  shape_dialog.ui  speed_dialog.ui  switch_dialog.ui  vcols.css  wprep_dialog.ui
src/mwpset/: meson.build  mwpset-config.h.in  mwpset.vala  mwpset.vapi  mwpsetedit.vala  setreader.vala
src/samples/: 131208-0513.mission  131227-0505.mission  131227-0511.mission  Makefile  README  auto-decl.c  clean-local.sh  clean-system.sh  find_sensors.rb  fixbbl8srvp.rb  flash.sh  flash_dump.rb  gansey.xml  gstmkv.sh  gzkml2gztxt.rb  land-missions.rb  ll2safehome.rb  m2js.rb  makealtfbh.rb  map_seeder.rb  meson.build  mission-infox.rb  mission2gpx.rb  mission_extract.rb  mkmkv.sh  mkwebm.sh  movemission.rb  msp_set_rc.rb  mw-mission.xsd  mwp-dbus-loc  mwp-dbus-loc.py  mwp-dbus-loc.vala  mwp-dbus-to-gpx.rb  mwp-log2sql.rb  mwp-plot-elevations.rb  mwp-qproxy.sh  mwp_gsettings.sh  mwpsql2gpx.rb  mwpsql2kml.rb  mwxml2cli.rb  (+16 more)
src/samples/adsb-extra/: Makefile  README-svg-workflow.md  README.md  adsbpbsrv.service  adsbpbsrv.vala  dtest.vala  fixup-svg.vala  generate-svg.rb  jclient.vala  jsacsrv.service  jsacsrv.vala  readsb.proto  readsbpb.vala  resize-icons.sh
src/samples/area-tool/: genpat.vala  mapsources.vala  meson.build  mwp-area-planner.desktop  survey.vala
src/samples/autodecl/: README.md  auto-decl  auto-decl.c  navigation_declination_gen.c
src/samples/bbsplit/: Cargo.toml  Makefile  README.md
src/samples/caltool/: Makefile  README.md  caltool  go.mod  go.sum  main.go  msp.go
src/samples/camlist/: README.md  camlist.vala
src/samples/cliterm/: Makefile  cliterm-main.vala  cliterm.vala  fsender.vala  meson.build  msp-msg-test.vala  mspfuzz.vala  msptest.vala  vxtest.vala  winrawchar.c  xcliterm-main.vala
src/samples/crsf/: Cargo.toml  README.md  build.ninja  crsf_test.vala  crsf_to_udp.rb  logreader.vala
src/samples/dbg-tool/: Makefile  README.md  dbg-tool.go  go.mod  go.sum  msp.go  uevent_linux.go  uevent_other.go
src/samples/dbus-examples/: mwp-dbus-loc.py  mwp-dbus-loc.rb  mwp-dbus-loc.vala  mwp-dbus-test.sh  mwp-dbus-to-gpx.rb  mwp-dbus.py  mwp-dbus.rb
src/samples/flashdl/: Makefile  flashdl.vala  flashdl_complete.sh  meson.build
src/samples/flashgo/: README.md  btaddr_linux.go  go.mod  go.sum  main.go  meson.build  msp.go
src/samples/flite/: Makefile  ftest.c  mwp.txt
src/samples/frsky/: Makefile  README  frsky  frsky.rb  frsky.vala  sport_dev_replay.rb  sport_tcp_replay.rb
src/samples/geozones/: Makefile  README.md  flatearth.go  geozones  go.mod  go.sum  kmlgenerator.go  main.go  zonereader.go
src/samples/gst-video/: Makefile  gst-devmon.vala  gst-video-player.vala
src/samples/hidex/: Makefile  hid-reader.vala  meson.build  (+3 more)
src/wcam/: meson.build  wcam.cpp  wcam.h  wcam.vapi
valaopts/: meson.build
(+816 files in other folders)
