option('nogo', type : 'boolean', value : false)
option('pointy-labels', type : 'boolean', value : false)
option('force-static', type : 'boolean', value : false)
option('deprecations', type : 'boolean', value : false)
option('extra-lib-paths', type : 'array')
option('extra-vapi-path', type : 'string')
