[package]
name = "bbsummary"
version = "0.1.0"
authors = ["Jonathan Hudson <jh+github@daria.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
csv = "1"
json = "0.11.15"
regex = "1"
dirs = "2.0.2"
